...
            "value" : "Abbrechen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancelar"
...
    "Courier New" : {

    },
    "CPU" : {

    },
    "Create" : {

    },
    "Create a new Claude Code session in ILS" : {

    },
    "Create a new session to chat with Claude Code." : {
...
    "DNS Configuration" : {

    },
    "DNS Setup Guide" : {

    },
    "Documentation" : {

    },
    "done" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
...
            "value" : "Bearbeiten"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Edit"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Editar"
...
    "Loading statistics…" : {

    },
    "Loading team metrics..." : {

    },
    "Loading templates..." : {

    },
    "Loading themes..." : {

    },
    "Loading version information..." : {
...
    "My Templates" : {

    },
    "my-ils-tunnel" : {

    },
    "Name" : {

    },
    "Named" : {

    },
    "Named tunnels require DNS configuration in your Cloudflare account." : {
...
    "New Recording" : {

    },
    "New Rule" : {

    },
    "New Session" : {

    },
    "New Template" : {

    },
    "New Theme" : {

    },
    "New version available" : {
...
    "Offset X" : {

    },
    "Offset Y" : {

    },
    "OK" : {

    },
    "Only alphanumeric characters and hyphens allowed" : {

    },
    "Only matches %@ permission requests." : {
...
            "value" : "Speichern"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Guardar"
...
    "Template name" : {

    },
    "Template: %@" : {

    },
    "Templates" : {

    },
    "Terminal" : {

    },
    "Terms of Service" : {
...
